--- a/index.Rmd
+++ b/index.Rmd
@@ -4,11 +4,21 @@
 <link rel="stylesheet" href="styles.css" type="text/css">
 
 <img src="images/davidalbertbrewer_headshot_1.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left">
-
-I like to analyze data to answer research questions and test hypotheses. Currently I investigate questions related to breast cancer through my work as a Research Biostatistician at [Memorial Sloan Kettering Cancer Center](https://www.mskcc.org/departments/epidemiology-biostatistics) in the department of Epidemiology & Biostatistics. 
-
-I graduated from the [University of Minnesota](http://www.sph.umn.edu/academics/divisions/biostatistics/) with a MS in biostatistics in 2010. In 2012 I began working toward my DrPH in biostatistics as a part-time student at [Columbia University](https://www.mailman.columbia.edu/become-student/departments/biostatistics), where I am investigating statistical methods for the study of etiologic heterogeneity in epidemiologic studies under the advisement of [Dr. Shuang Wang](https://www.mailman.columbia.edu/people/our-faculty/sw2206) at Columbia University and [Dr. Colin Begg](https://www.mskcc.org/profile/colin-begg) at Memorial Sloan Kettering Cancer Center. I expect to graduate by the end of 2018.
-
-I am a well-known R enthusiast, including serving on the board and being an active member of [R Ladies NYC](http://www.rladiesnyc.org/). 
-
-My full CV is available [here](files/Zabor_CV_2017_Q4.pdf).
+  
+My current skill set is at the intersection of business, statistics, computing, data analysis, and data modeling.  
+  
+I studied data science at the [University of Montana](https://www.umt.edu/study/data-science) and graduated with an MS in [Business Analytics](http://www.business.umt.edu/programs/graduate/msba-program/) as part of the inagural cohort in 2017. 
+  
+I began my career working with a innovative startup focused on real estate technology, [Real Estate Pipeline](https://www.realestatepipeline.com/).
+  
+During graduate school I worked as an assistant to professors:    
+ - Dr. Shawn Clouse, MIS  
+ - Dr. Jason Triche, Data Analytics  
+ - Dr. Justin Angle, Marketing  
+  
+I completed internships with local Montana companies:
+ - [DataSmart Solutions](https://thinkdatasmart.com/) as a BI developer  
+ - CTG, Inc now [CompuNet](https://www.compunet.biz/) as a junior data scientist  
+ - [PayneWest Insurance](https://www.paynewest.com/) as a data analyst  
+  
+My full resume is available [here](files/David_Brewer_Resume.pdf).
