--- a/projects.Rmd
+++ b/projects.Rmd
@@ -7,4 +7,14 @@
 
 This page is under construction....more projects coming soon  
   
-[Tableau Dashboards](https://public.tableau.com/profile/david.brewer#!/)
+*Data Visualization using Tableau*
+[Tableau Dashboards](https://public.tableau.com/profile/david.brewer#!/)  
+Here are some various Tableau projects from graduate school and internships  
+
+*R Shiny Applications*
+I use R Shiny to productionalize statistical data analysis written in R.  
+[Online Lead Generation](https://davidalbertbrewer.shinyapps.io/Lead_Production_Dashboard/)  
+This app is built on top of a data warehouse crated from several disparate databases as well as marketing feeds from various PPC ad partners like Google Adwords, Bing Ads, and Facebook.  
+This provided a high level overview of lead production across all advertisers for ~15 real estate lead generation websites.  The dashboard provided enough information to make decisions about diversification of ad spend for about $30K per month.  
+Based on this work I was able to help by rigorously segmenting the advertising and feeding the results into a revenue optimization model.  This allowed prices to be dynamically changed based on factors like cost per lead, propensity score, expected value, supply/demand, and other factors.
+
