--- a/projects.Rmd
+++ b/projects.Rmd
@@ -1,18 +1,29 @@
 ---
 ---
+<img src="https://davidalbertbrewer.s3-us-west-2.amazonaws.com/davidalbertbrewer_logo_20191110.png">
 
-<img src="https://davidalbertbrewer.s3-us-west-2.amazonaws.com/davidalbertbrewer_headshot_1.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left">
 
-This page is under construction....more projects coming soon  
+## This page is under construction....more projects coming soon!  
+<br>
+<br>
   
-*Data Visualization using Tableau*
-[Tableau Dashboards](https://public.tableau.com/profile/david.brewer#!/)  
-Here are some various Tableau projects from graduate school and internships  
+#### Data Visualization Using Tableau  
+**I use Tableau for data analysis and business intelligence.**
+  
+Here are some various Tableau projects from graduate school and internships:  
+[Tableau Dashboards](https://public.tableau.com/profile/david.brewer#!/)
+  
+I have also participated in the implementation of Tableau Server.
+<br>
+<br>
 
-*R Shiny Applications*
-I use R Shiny to productionalize statistical data analysis written in R.  
+#### R Shiny Applications  
+**I use R Shiny to productionalize statistical data analysis written in R.**  
+  
+Here is an example of an R shiny app I built for an internship and deployed on shinyapps.io:  
 [Online Lead Generation](https://davidalbertbrewer.shinyapps.io/Lead_Production_Dashboard/)  
-This app is built on top of a data warehouse crated from several disparate databases as well as marketing feeds from various PPC ad partners like Google Adwords, Bing Ads, and Facebook.  
-This provided a high level overview of lead production across all advertisers for ~15 real estate lead generation websites.  The dashboard provided enough information to make decisions about diversification of ad spend for about $30K per month.  
-Based on this work I was able to help by rigorously segmenting the advertising and feeding the results into a revenue optimization model.  This allowed prices to be dynamically changed based on factors like cost per lead, propensity score, expected value, supply/demand, and other factors.
+  
+This app is built on top of a data warehouse created from several disparate databases as well as marketing data feeds from various PPC ad partners like Google Adwords, Bing Ads, and Facebook.  The app provided a high level overview of lead production across all advertisers for ~15 real estate lead generation websites.  The dashboard provided enough information to make weelky decisions optimizing diversification of ad spend for ~$30K per month.  
+  
+Based on this work I was able to help by rigorously segmenting the advertising and feeding the results into a revenue optimization model.  This allowed prices to be dynamically changed based on factors like cost per lead, propensity score, expected value, supply/demand, and other factors.  
 
